--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     ]
   },
   "devDependencies": {
-    "@redwoodjs/core": "^0.13.0",
+    "@prisma/cli": "^2.3.0",
+    "@redwoodjs/core": "^0.14.0",
     "netlify-plugin-prisma-provider": "^0.3.0"
   },
   "eslintConfig": {
